--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -12,17 +12,43 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
             <meta name="apple-mobile-web-app-capable" content="yes" />
         </f:facet>
-        <title>PrimeFaces Rio</title>
+        <title>SIENI</title>
 
         <h:outputScript name="js/ripple-effect.js" library="rio-layout" />
         <h:outputScript name="js/perfect-scrollbar.js" library="rio-layout" />
         <h:outputScript name="js/layout.js" library="rio-layout" />
-
         <ui:insert name="head" />
     </h:head>
 
     <h:body>
-
+        <script type="text/javascript">
+            PrimeFaces.locales['es'] = {
+                closeText: 'Cerrar',
+                prevText: 'Anterior',
+                nextText: 'Siguiente',
+                monthNames: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
+                monthNamesShort: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun', 'Jul', 'Ago', 'Sep', 'Oct', 'Nov', 'Dic'],
+                dayNames: ['Domingo', 'Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado'],
+                dayNamesShort: ['Dom', 'Lun', 'Mar', 'Mie', 'Jue', 'Vie', 'Sab'],
+                dayNamesMin: ['D', 'L', 'M', 'X', 'J', 'V', 'S'],
+                weekHeader: 'Semana',
+                firstDay: 1,
+                isRTL: false,
+                showMonthAfterYear: false,
+                yearSuffix: '',
+                timeOnlyTitle: 'Sólo hora',
+                timeText: 'Tiempo',
+                hourText: 'Hora',
+                minuteText: 'Minuto',
+                secondText: 'Segundo',
+                currentText: 'Fecha actual',
+                ampm: false,
+                month: 'Mes',
+                week: 'Semana',
+                day: 'Día',
+                allDayText: 'Todo el día'
+            };
+        </script>
         <ui:include src="topbar.xhtml" />
 
         <div id="wrapper">
@@ -31,19 +57,17 @@
                 <ui:include src="layoutmenu.xhtml" />
 
                 <div id="layout-portlets-cover">
-                    <p:tabView >
-                        <p:tab title="Gestionar alumnos">
-                            <ui:insert name="content">
-                                Template
-                            </ui:insert>
-                        </p:tab>
-                        <p:tab title="Gestionar docentes">
-                        </p:tab>
-                        <p:tab title="Administración de Sistema">
-                        </p:tab>
-                        <p:tab title="Gestión Año Escolar">
-                        </p:tab>
-                    </p:tabView>
+                    <ui:insert name="breadCrumb">
+                        <p:breadCrumb>
+                            <p:menuitem value="Home" url="/"/>
+                            <p:menuitem value="Gestión Año Escolar" url="#"/>
+                            <p:menuitem value="Apertura Año escolar" url="/faces/view/aperturaAnioEscolar/index.xhtml"/>
+                            <p:separator />
+                        </p:breadCrumb>
+                    </ui:insert>
+                    <ui:insert name="content">
+                        Template
+                    </ui:insert>
                     <div class="Container100">
                         <div class="ContainerIndent Fs12 BoldGray FontRobotoRegular" style="text-align: center">
                             <div class="EmptyBox10"></div>
