--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
@@ -16,21 +16,21 @@
         
         <ul id="top-menu" class="ShowOnDesktop">
             <li>
-                <a class="ripplelink"><i class="icon-search100"></i> <span class="Txt">Search</span></a>
+                <a class="ripplelink"><i class="icon-search100"></i> <span class="Txt">Buscar</span></a>
                 <ul>
-                    <li><input type="text" placeholder="Search"/></li>
+                    <li><input type="text" placeholder="Buscar"/></li>
                 </ul>
             </li>
             <li>
-                <a class="ripplelink"><i class="icon-set6"></i> <span class="Txt">Tasks</span></a>
+                <a class="ripplelink"><i class="icon-set6"></i> <span class="Txt">Actividades</span></a>
                 <ul>
-                    <li><a href="#">23 New Tasks</a></li>
+                    <li><a href="#">23 Actividades</a></li>
                 </ul>
             </li>
             <li>
-                <a class="ripplelink"><i class="icon-notifications1"></i> <span class="Txt">Alerts</span></a>
+                <a class="ripplelink"><i class="icon-notifications1"></i> <span class="Txt">Notificaciones</span></a>
                 <ul>
-                    <li><a href="#">18 Alerts</a></li>
+                    <li><a href="#">18 Notificaciones</a></li>
                 </ul>
             </li>
             <li><a href="#" class="ripplelink"><i class="icon-wifi83"></i> <span class="Txt">System Settings</span></a></li>
