pantallas de entradas 2 y 3

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -36,14 +36,14 @@
                     <p:menuitem value="Perfil control permisos" url="#" />
                     <p:menuitem value="Bítacora" url="#" />
                 </p:submenu>
-                <p:submenu label="Gestión Año Escolar">
+                <p:submenu label="Gestionar Año Escolar">
                     <p:menuitem value="Apertura Año escolar" url="/faces/view/aperturaAnioEscolar/index.xhtml"/>
                     <p:menuitem value="Mantenimiento Materias" url="#" />
                     <p:menuitem value="Mantenimiento Secciones" url="#" />
                     <p:menuitem value="Matricula de Alumno" url="#" />
                 </p:submenu>
-                <p:submenu label="Gestión Curso">
-                    <p:menuitem value="Mantenimiento Curso" url="#" />
+                <p:submenu label="Gestionar Curso">
+                    <p:menuitem value="Mantenimiento Curso" url="/faces/view/formularioRegistroCurso/index.xhtml" />
                     <p:submenu label="Mantenimiento Clases">
                         <p:menuitem value="Video-Clase Almacenada" url="#" />
                         <p:menuitem value="Clase en Vivo" url="#" />
