--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -21,81 +21,86 @@
     </h:head>
 
     <h:body>
-        <script type="text/javascript">
-            PrimeFaces.locales['es'] = {
-                closeText: 'Cerrar',
-                prevText: 'Anterior',
-                nextText: 'Siguiente',
-                monthNames: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
-                monthNamesShort: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun', 'Jul', 'Ago', 'Sep', 'Oct', 'Nov', 'Dic'],
-                dayNames: ['Domingo', 'Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado'],
-                dayNamesShort: ['Dom', 'Lun', 'Mar', 'Mie', 'Jue', 'Vie', 'Sab'],
-                dayNamesMin: ['D', 'L', 'M', 'X', 'J', 'V', 'S'],
-                weekHeader: 'Semana',
-                firstDay: 1,
-                isRTL: false,
-                showMonthAfterYear: false,
-                yearSuffix: '',
-                timeOnlyTitle: 'Sólo hora',
-                timeText: 'Tiempo',
-                hourText: 'Hora',
-                minuteText: 'Minuto',
-                secondText: 'Segundo',
-                currentText: 'Fecha actual',
-                ampm: false,
-                month: 'Mes',
-                week: 'Semana',
-                day: 'Día',
-                allDayText: 'Todo el día'
-            };
-        </script>
-        <ui:include src="topbar.xhtml" />
+        <style type="text/css">
+            .ui-panel .ui-panel-title { font-family: serif; }
+        </style>
+        <div style="font-family: serif;">
+            <script type="text/javascript">
+                PrimeFaces.locales['es'] = {
+                    closeText: 'Cerrar',
+                    prevText: 'Anterior',
+                    nextText: 'Siguiente',
+                    monthNames: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
+                    monthNamesShort: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun', 'Jul', 'Ago', 'Sep', 'Oct', 'Nov', 'Dic'],
+                    dayNames: ['Domingo', 'Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado'],
+                    dayNamesShort: ['Dom', 'Lun', 'Mar', 'Mie', 'Jue', 'Vie', 'Sab'],
+                    dayNamesMin: ['D', 'L', 'M', 'X', 'J', 'V', 'S'],
+                    weekHeader: 'Semana',
+                    firstDay: 1,
+                    isRTL: false,
+                    showMonthAfterYear: false,
+                    yearSuffix: '',
+                    timeOnlyTitle: 'Sólo hora',
+                    timeText: 'Tiempo',
+                    hourText: 'Hora',
+                    minuteText: 'Minuto',
+                    secondText: 'Segundo',
+                    currentText: 'Fecha actual',
+                    ampm: false,
+                    month: 'Mes',
+                    week: 'Semana',
+                    day: 'Día',
+                    allDayText: 'Todo el día'
+                };
+            </script>
+            <ui:include src="topbar.xhtml" />
 
-        <div id="wrapper">
-            <div id="wrapperIndent">
+            <div id="wrapper">
+                <div id="wrapperIndent">
 
-                <ui:include src="layoutmenu.xhtml" />
+                    <ui:include src="layoutmenu.xhtml" />
 
-                <div id="layout-portlets-cover">
-                    <ui:insert name="breadCrumb">
-                        <p:breadCrumb>
-                            <p:menuitem value="Home" url="/"/>
-                            <p:menuitem value="Gestión Año Escolar" url="#"/>
-                            <p:menuitem value="Apertura Año escolar" url="/faces/view/aperturaAnioEscolar/index.xhtml"/>
-                            <p:separator />
-                        </p:breadCrumb>
-                    </ui:insert>
-                    <ui:insert name="content">
-                        Template
-                    </ui:insert>
-                    <div class="Container100">
-                        <div class="ContainerIndent Fs12 BoldGray FontRobotoRegular" style="text-align: center">
-                            <div class="EmptyBox10"></div>
-                            Copyright © 2015
-                            <div class="EmptyBox10"></div>
+                    <div id="layout-portlets-cover">
+                        <ui:insert name="breadCrumb">
+                            <p:breadCrumb>
+                                <p:menuitem value="Home" url="/"/>
+                                <p:menuitem value="Gestión Año Escolar" url="#"/>
+                                <p:menuitem value="Apertura Año escolar" url="/faces/view/aperturaAnioEscolar/index.xhtml"/>
+                                <p:separator />
+                            </p:breadCrumb>
+                        </ui:insert>
+                        <ui:insert name="content">
+                            Template
+                        </ui:insert>
+                        <div class="Container100">
+                            <div class="ContainerIndent Fs12 BoldGray FontRobotoRegular" style="text-align: center">
+                                <div class="EmptyBox10"></div>
+                                Copyright © 2015
+                                <div class="EmptyBox10"></div>
+                            </div>
                         </div>
                     </div>
+
+                    <p:ajaxStatus style="width:32px;height:32px;position:fixed;right:7px;bottom:7px">
+                        <f:facet name="start">
+                            <p:graphicImage name="images/preloader.gif" library="rio-layout"/>
+                        </f:facet>
+
+                        <f:facet name="complete">
+                            <h:outputText value="" />
+                        </f:facet>
+                    </p:ajaxStatus>
                 </div>
-
-                <p:ajaxStatus style="width:32px;height:32px;position:fixed;right:7px;bottom:7px">
-                    <f:facet name="start">
-                        <p:graphicImage name="images/preloader.gif" library="rio-layout"/>
-                    </f:facet>
-
-                    <f:facet name="complete">
-                        <h:outputText value="" />
-                    </f:facet>
-                </p:ajaxStatus>
             </div>
-        </div>
 
-        <h:outputStylesheet name="css/core-layout.css" library="rio-layout" />
-        <h:outputStylesheet name="css/animate.css" library="rio-layout" />
-        <h:outputStylesheet name="css/rio-font.css" library="rio-layout" />
-        <h:outputStylesheet name="css/ripple-effect.css" library="rio-layout" />
-        <h:outputStylesheet name="css/perfect-scrollbar.css" library="rio-layout" />
-        <h:outputStylesheet name="css/font-awesome.css" library="rio-layout" />
-        <h:outputStylesheet name="css/rio-layout.css" library="rio-layout" />
+            <h:outputStylesheet name="css/core-layout.css" library="rio-layout" />
+            <h:outputStylesheet name="css/animate.css" library="rio-layout" />
+            <h:outputStylesheet name="css/rio-font.css" library="rio-layout" />
+            <h:outputStylesheet name="css/ripple-effect.css" library="rio-layout" />
+            <h:outputStylesheet name="css/perfect-scrollbar.css" library="rio-layout" />
+            <h:outputStylesheet name="css/font-awesome.css" library="rio-layout" />
+            <h:outputStylesheet name="css/rio-layout.css" library="rio-layout" />
+        </div>
     </h:body>
 
 </html>
