modificacion tamaño logo plantilla

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
@@ -7,6 +7,9 @@
     
     
     <div id="layout-topbar">
+        <style type="text/css">
+            #logo img{height:55px; max-width:123px; margin-top:5px; margin-left:8%;}
+        </style>
     	<div id="logo" class="Fleft">
         	<a href="#"><h:graphicImage name="mined.jpg" styleClass="Fleft" library="images" /></a>
             <a id="mobile-menu-button" class="Fright ShowOnMobile ripplelink Unselectable ShadowEffect"><i class="icon-add186"></i></a>
