--- a/SIENI/SIENI-web/src/main/webapp/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/index.xhtml
@@ -1,14 +1,27 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-        <br />
-        <h:link outcome="view/template/template" value="Primefaces welcome page" />
-    </h:body>
-</html>
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
+    <h:head>
+        <f:facet name="first">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+            <meta name="apple-mobile-web-app-capable" content="yes" />
+        </f:facet>
+        <title>SIENI</title>
+
+        <h:outputScript name="js/ripple-effect.js" library="rio-layout" />
+        <h:outputScript name="js/perfect-scrollbar.js" library="rio-layout" />
+        <h:outputScript name="js/layout.js" library="rio-layout" />
+        <ui:insert name="head" />
+    </h:head>
+
+    <h:body>
+        #{crypto.cryp}
+    </h:body>
+
+</html>
