mejora de diseño de pantalla clases

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -43,6 +43,7 @@
                     <p:menuitem value="Matricula de Alumno" url="#" />
                 </p:submenu>
                 <p:submenu label="Gestionar Curso">
+                    <p:menuitem value="Mantenimiento de Archivos Multimedia" url="/faces/view/archivosMultimedia/index.xhtml" />
                     <p:menuitem value="Mantenimiento Curso" url="/faces/view/formularioRegistroCurso/index.xhtml" />
                     <p:submenu label="Mantenimiento Clases">
                         <p:menuitem value="Video-Clase Almacenada" url="#" />
