mejora de diseño de pantallas y creacion de modelos de BD (5 entradas listas)

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -37,15 +37,16 @@
                     <p:menuitem value="Bítacora" url="#" />
                 </p:submenu>
                 <p:submenu label="Gestionar Año Escolar">
-                    <p:menuitem value="Apertura Año escolar" url="/faces/view/aperturaAnioEscolar/index.xhtml"/>
+                    <p:menuitem value="Mantenimiento de Año escolar" url="#{siteUrls.gestionarAnioEscolar}"/>
                     <p:menuitem value="Mantenimiento Materias" url="#" />
                     <p:menuitem value="Mantenimiento Secciones" url="#" />
                     <p:menuitem value="Matricula de Alumno" url="#" />
                 </p:submenu>
                 <p:submenu label="Gestionar Curso">
-                    <p:menuitem value="Mantenimiento de Archivos Multimedia" url="/faces/view/archivosMultimedia/index.xhtml" />
-                    <p:menuitem value="Mantenimiento Curso" url="/faces/view/formularioRegistroCurso/index.xhtml" />
-                    <p:submenu label="Mantenimiento Clases">
+                    <p:menuitem value="Mantenimiento de Archivos Multimedia" url="#{siteUrls.gestionArchivosMultimedia}" />
+                    <p:menuitem value="Mantenimiento de Curso" url="#{siteUrls.gestionarCursos}" />
+                    <p:submenu label="Gestionar Clases">
+                        <p:menuitem value="Programación de Clases" url="#{siteUrls.programacionClases}" />
                         <p:menuitem value="Video-Clase Almacenada" url="#" />
                         <p:menuitem value="Clase en Vivo" url="#" />
                         <p:submenu label="Ejercicios" >                        
