mejora de diseño de pantallas, agregado de filtros y creación de portal de consultas

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -62,7 +62,7 @@
                     <p:menuitem value="Mantenimiento Noticias" url="#" />
                 </p:submenu>
                 <p:submenu label="Portal de Consultas">
-                    <p:menuitem value="Mantenimiento Consultas" url="#" />
+                    <p:menuitem value="Gestión de Consultas" url="#{siteUrls.gestionConsulta}" />
                 </p:submenu>
                 <p:submenu label="Buzon de Notificaciones">
                     <p:menuitem value="Mantenimiento Consultas" url="#" />
