--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -17,6 +17,7 @@
         <h:outputScript name="js/ripple-effect.js" library="rio-layout" />
         <h:outputScript name="js/perfect-scrollbar.js" library="rio-layout" />
         <h:outputScript name="js/layout.js" library="rio-layout" />
+        <h:outputStylesheet name="style.css" library="css" />
         <ui:insert name="head" />
     </h:head>
 
