modificacion de pantalla de gestion de evaluaciones

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -53,9 +53,7 @@
                             <p:menuitem value="Ejercicios Resueltos" url="#" />
                         </p:submenu>
                     </p:submenu>
-                    <p:submenu label="Mantenimiento Evaluaciones">
-                        <p:menuitem value="Evaluaciones" url="#" />
-                    </p:submenu>
+                    <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
                     <p:menuitem value="Control de Notas" url="#" />
                 </p:submenu>
                 <p:submenu label="Portal de Noticias">
