--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -63,7 +63,7 @@
                 <p:menuitem value="Buzón de notificaciones" url="#{siteUrls.buzonNotificacion}"/>
                 <p:submenu label="Generar Reportes">
                     <p:menuitem value="Reporte de Matricula" url="#{siteUrls.reporteMatricula}" />
-                    <p:menuitem value="Reporte de Rendimiento" url="#" />
+                    <p:menuitem value="Reporte de Rendimiento" url="#{siteUrls.reporteRendimientoAlumno}" />
                     <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
                     <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
                     <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
