--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -43,9 +43,9 @@
                     <p:menuitem value="Mantenimiento de Curso" url="#{siteUrls.gestionarCursos}" />
                     <p:submenu label="Gestionar Clases">
                         <p:menuitem value="Programación de Clases" url="#{siteUrls.programacionClases}" />
-                        <p:menuitem value="Clase en Vivo" url="#" />
-                        <p:menuitem value="Video-Clase Almacenada" url="#" />
-                        <p:menuitem value="Clase Interactiva" url="#" />
+                        <p:menuitem value="Clase en Vivo" url="#{siteUrls.claseOnline}" />
+                        <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
+                        <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
                         <p:submenu label="Ejercicios" >                        
                             <p:menuitem value="Ejercicios Resueltos" url="#{siteUrls.ejerciciosResueltos}" />
                         </p:submenu>
