--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -47,7 +47,7 @@
                         <p:menuitem value="Video-Clase Almacenada" url="#" />
                         <p:menuitem value="Clase Interactiva" url="#" />
                         <p:submenu label="Ejercicios" >                        
-                            <p:menuitem value="Ejercicios Resueltos" url="#" />
+                            <p:menuitem value="Ejercicios Resueltos" url="#{siteUrls.ejerciciosResueltos}" />
                         </p:submenu>
                     </p:submenu>
                     <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
