--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -67,12 +67,12 @@
                     <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
                     <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
                     <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
-                    <p:menuitem value="Reporte de Reporte de Clases" url="#" />
-                    <p:menuitem value="Reporte de Reporte de Notas" url="#" />
-                    <p:menuitem value="Reporte de Reporte de Participación" url="#" />
-                    <p:menuitem value="Reporte de Reporte de Cursos" url="#" />
-                    <p:menuitem value="Reporte de Reporte de Alumnos" url="#" />
-                    <p:menuitem value="Reporte de Reporte de Docentes" url="#" />
+                    <p:menuitem value="Reporte de Clases" url="#{siteUrls.reporteClases}" />
+                    <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
+                    <p:menuitem value="Reporte de Cursos" url="#{siteUrls.reporteCursos}" />
+                    <p:menuitem value="Reporte de Alumnos" url="#{siteUrls.reporteAlumnos}" />
+                    <p:menuitem value="Reporte de Docentes" url="#{siteUrls.reporteDocentes}" />
+                    <p:menuitem value="Reporte de Usuarios" url="#{siteUrls.reporteUsuarios}" />
                 </p:submenu>
                 <p:separator />
             </pr:menu>
