--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -31,7 +31,7 @@
                 </p:submenu>
                 <p:submenu label="Administración de Sistema">
                     <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
-                    <p:menuitem value="Bítacora" url="#" />
+                    <p:menuitem value="Bítacora" url="#{siteUrls.bitacora}" />
                 </p:submenu>
                 <p:submenu label="Gestionar Año Escolar">
                     <p:menuitem value="Mantenimiento de Año escolar" url="#{siteUrls.gestionarAnioEscolar}"/>
