--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -50,6 +50,7 @@
                             <p:menuitem value="Ejercicios Resueltos" url="#{siteUrls.ejerciciosResueltos}" />
                         </p:submenu>
                     </p:submenu>
+                    <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />
                     <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
                     <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
                     <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}" />
