--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -23,8 +23,7 @@
 
         <h:body>
             <style type="text/css">
-                .ui-tabs-nav .ui-helper-reset .ui-helper-clearfix .ui-widget-header .ui-corner-all 
-                { font-family: serif; }
+                .ui-panel .ui-panel-title { font-family: serif; }
             </style>
             <div style="font-family: serif;">
                 <script type="text/javascript">
@@ -55,32 +54,45 @@
                         allDayText: 'Todo el día'
                     };
                 </script>
+                <ui:include src="topbar.xhtml" />
 
+                <div id="wrapper">
+                    <div id="wrapperIndent">
 
+                        <ui:include src="layoutmenu.xhtml" />
 
-                <ui:insert name="breadCrumb">
-                    <p:breadCrumb>
-                        <p:menuitem value="Home" url="/"/>
-                        <p:menuitem value="Gestión Año Escolar" url="#"/>
-                        <p:menuitem value="Apertura Año escolar" url="/faces/view/aperturaAnioEscolar/index.xhtml"/>
-                        <p:separator />
-                    </p:breadCrumb>
-                </ui:insert>
-                <ui:insert name="content">
-                    Template
-                </ui:insert>
+                        <div id="layout-portlets-cover">
+                            <ui:insert name="breadCrumb">
+                                <p:breadCrumb>
+                                    <p:menuitem value="Home" url="/"/>
+                                    <p:menuitem value="Gestión Año Escolar" url="#"/>
+                                    <p:menuitem value="Apertura Año escolar" url="/faces/view/aperturaAnioEscolar/index.xhtml"/>
+                                    <p:separator />
+                                </p:breadCrumb>
+                            </ui:insert>
+                            <ui:insert name="content">
+                                Template
+                            </ui:insert>
+                            <div class="Container100">
+                                <div class="ContainerIndent Fs12 BoldGray FontRobotoRegular" style="text-align: center">
+                                    <div class="EmptyBox10"></div>
+                                    Copyright © 2015
+                                    <div class="EmptyBox10"></div>
+                                </div>
+                            </div>
+                        </div>
 
+                        <p:ajaxStatus style="width:32px;height:32px;position:fixed;right:7px;bottom:7px">
+                            <f:facet name="start">
+                                <p:graphicImage name="images/preloader.gif" library="rio-layout"/>
+                            </f:facet>
 
-                <p:ajaxStatus style="width:32px;height:32px;position:fixed;right:7px;bottom:7px">
-                    <f:facet name="start">
-                        <p:graphicImage name="images/preloader.gif" library="rio-layout"/>
-                    </f:facet>
-
-                    <f:facet name="complete">
-                        <h:outputText value="" />
-                    </f:facet>
-                </p:ajaxStatus>
-
+                            <f:facet name="complete">
+                                <h:outputText value="" />
+                            </f:facet>
+                        </p:ajaxStatus>
+                    </div>
+                </div>
 
                 <h:outputStylesheet name="css/core-layout.css" library="rio-layout" />
                 <h:outputStylesheet name="css/animate.css" library="rio-layout" />
