modificacion de navegación de menu

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -23,19 +23,14 @@
         <div class="Separator"></div>
         <h:form>
             <pr:menu >
-                <p:submenu label="Gestionar Alumnos">
-                    <p:menuitem value="Expediente Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
-                </p:submenu>
-                <p:submenu label="Gestionar Docentes">
-                    <p:menuitem value="Mantenimiento de Docentes" url="#{siteUrls.gestionDocentes}" />
-                </p:submenu>
+                <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
+                <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
                 <p:submenu label="Administración de Sistema">
                     <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
                     <p:menuitem value="Bítacora" url="#{siteUrls.bitacora}" />
                 </p:submenu>
                 <p:submenu label="Gestionar Año Escolar">
                     <p:menuitem value="Mantenimiento de Año escolar" url="#{siteUrls.gestionarAnioEscolar}"/>
-
                     <p:menuitem value="Matricula de Alumno" url="#{siteUrls.gestionAlumnos}" />
                 </p:submenu>
                 <p:submenu label="Gestionar Curso">
@@ -55,12 +50,8 @@
                     <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
                     <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}" />
                 </p:submenu>
-                <p:submenu label="Portal de Noticias">
-                    <p:menuitem value="Gestión de Noticias" url="#{siteUrls.gestionNoticia}" />
-                </p:submenu>
-                <p:submenu label="Portal de Consultas">
-                    <p:menuitem value="Gestión de Consultas" url="#{siteUrls.gestionConsulta}" />
-                </p:submenu>
+                <p:menuitem value="Portal de Noticias" url="#{siteUrls.gestionNoticia}" />
+                <p:menuitem value="Portal de Consultas" url="#{siteUrls.gestionConsulta}" />
                 <p:menuitem value="Buzón de notificaciones" url="#{siteUrls.buzonNotificacion}"/>
                 <p:submenu label="Generar Reportes">
                     <p:menuitem value="Reporte de Matricula" url="#{siteUrls.reporteMatricula}" />
