--- a/SIENI/SIENI-web/src/main/webapp/404.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/404.xhtml
@@ -12,7 +12,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
             <meta name="apple-mobile-web-app-capable" content="yes" />
         </f:facet>
-        <title>PrimeFaces RIO</title>
+        <title>SIENI-ERROR</title>
         <ui:insert name="head" />
     </h:head>
 
@@ -24,16 +24,16 @@
                 <div class="Card ShadowEffect">
                     <div class="EmptyBox40"></div>
                     <i class="icon-windows Fs100 Orange"></i> 
-                    <div class="Wid100 OvHidden Fs30 Orange">404 Page Not Found !</div>
-                    <div class="Wid100 OvHidden Fs20 BoldGray">Sorry, but the resource you are looking<br/> for has not been found.</div>
+                    <div class="Wid100 OvHidden Fs30 Orange">404 Página no encontrada !</div>
+                    <div class="Wid100 OvHidden Fs20 BoldGray">Lo Sentimos, el recurso que está intentando accesar no ha sido encontrado</div>
                     <div class="EmptyBox20"></div>
                     <div class="Separator"></div>
                     <div class="EmptyBox10"></div>
-                    <div class="Wid100"><p:button value="Back To Dashboard" icon="fa fa-dashboard" styleClass="OrangeButton Wid60 Fs18 White RaisedButton" href="dashboard.xhtml"/></div>
+                    <div class="Wid100"><p:button value="ir a Pagina Principal" icon="fa fa-dashboard" styleClass="OrangeButton Wid60 Fs18 White RaisedButton" href="index.xhtml"/></div>
                     <div class="EmptyBox20"></div>
                 </div>
                 <div class="Wid100 TexAlCenter MarTop20 Fs14 FontRobotoRegular WhiteBlue">
-                        <i class="fa fa-copyright"></i>  PrimeFaces RIO Theme And Layout <br/> All rights reserved.
+                        <i class="fa fa-copyright"></i>  Copyright 2015
                     </div>
             </div>
         </div>
