--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -41,9 +41,7 @@
                         <p:menuitem value="Clase en Vivo" url="#{siteUrls.claseOnline}" />
                         <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
                         <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
-                        <p:submenu label="Ejercicios" >                        
-                            <p:menuitem value="Ejercicios Resueltos" url="#{siteUrls.ejerciciosResueltos}" />
-                        </p:submenu>
+                        <p:menuitem value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
                     </p:submenu>
                     <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />
                     <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
