--- a/SIENI/SIENI-web/src/main/webapp/404.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/404.xhtml
@@ -29,7 +29,7 @@
                     <div class="EmptyBox20"></div>
                     <div class="Separator"></div>
                     <div class="EmptyBox10"></div>
-                    <div class="Wid100"><p:button value="ir a Pagina Principal" icon="fa fa-dashboard" styleClass="OrangeButton Wid60 Fs18 White RaisedButton" href="index.xhtml"/></div>
+                    <div class="Wid100"><p:button value="ir a Pantalla Principal" icon="fa fa-dashboard" styleClass="OrangeButton Wid60 Fs18 White RaisedButton" href="index.xhtml"/></div>
                     <div class="EmptyBox20"></div>
                 </div>
                 <div class="Wid100 TexAlCenter MarTop20 Fs14 FontRobotoRegular WhiteBlue">
