--- a/SIENI/SIENI-web/src/main/webapp/access-denied.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/access-denied.xhtml
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
     <h:head>
         <f:facet name="first">
@@ -12,32 +12,32 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
             <meta name="apple-mobile-web-app-capable" content="yes" />
         </f:facet>
-        <title>PrimeFaces RIO</title>
+        <title>SIENI-Acceso Denegado</title>
         <ui:insert name="head" />
     </h:head>
 
     <h:body styleClass="loginbodyorange">
-        
+
         <div class="Wid90 DispBlock MarAuto MarTopPerc10 TexAlCenter">
             <div class="Wid33 MarAuto WidAutoOnMobile">
                 <div class="EmptyBox30"></div>
                 <div class="Card ShadowEffect">
                     <div class="EmptyBox40"></div>
                     <i class="icon-virtual2 Fs100 Orange"></i> 
-                    <div class="Wid100 OvHidden Fs30 Orange">Access Denied <br/>Please Check Your Permissions !</div>
-                    <div class="Wid100 OvHidden Fs20 BoldGray">Sorry, but you have no access to this page.</div>
+                    <div class="Wid100 OvHidden Fs30 Orange">Acceso denegado<br/>Por favor verifica tus permisos!</div>
+                    <div class="Wid100 OvHidden Fs20 BoldGray">Lo Sentimos, pero no tienes permiso para accesar a esta página.</div>
                     <div class="EmptyBox20"></div>
                     <div class="Separator"></div>
                     <div class="EmptyBox10"></div>
-                    <div class="Wid100"><p:button value="Back To Dashboard" icon="fa fa-dashboard" styleClass="OrangeButton Wid60 Fs18 White RaisedButton" href="dashboard.xhtml"/></div>
+                    <div class="Wid100"><p:button value="ir a Pantalla Principal" icon="fa fa-dashboard" styleClass="OrangeButton Wid60 Fs18 White RaisedButton" href="index.xhtml"/></div>
                     <div class="EmptyBox20"></div>
                 </div>
                 <div class="Wid100 TexAlCenter MarTop20 Fs14 FontRobotoRegular WhiteBlue">
-                        <i class="fa fa-copyright"></i>  PrimeFaces RIO Theme And Layout <br/> All rights reserved.
-                    </div>
+                    <i class="fa fa-copyright"></i>  Copyright 2015
+                </div>
             </div>
         </div>
-        
+
         <h:outputStylesheet name="css/core-layout.css" library="rio-layout" />
         <h:outputStylesheet name="css/animate.css" library="rio-layout" />
         <h:outputStylesheet name="css/rio-font.css" library="rio-layout" />
