--- a/SIENI/SIENI-web/src/main/webapp/login.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/login.xhtml
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
     <h:head>
         <f:facet name="first">
@@ -12,41 +12,33 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
             <meta name="apple-mobile-web-app-capable" content="yes" />
         </f:facet>
-        <title>PrimeFaces RIO</title>
+        <title>SIENI-Login</title>
         <ui:insert name="head" />
     </h:head>
 
     <h:body styleClass="loginbodyblue">
-        
+
         <div class="Wid90 DispBlock MarAuto MarTopPerc5 TexAlCenter">
             <div class="Wid33 MarAuto WidAutoOnMobile">
-                <h:graphicImage name="images/logo.svg" library="rio-layout" style="width:40%; max-width:200px;"/>
+                <h:graphicImage name="mined.jpg" library="images" style="width:40%; max-width:200px;"/>
                 <div class="EmptyBox30"></div>
                 <div class="Card ShadowEffect">
                     <div class="EmptyBox20"></div>
-                    <div class="Wid100 OvHidden BigTopic Fs30"><i class="icon-users Fs40"></i> Login Panel</div>
+                    <div class="Wid100 OvHidden BigTopic Fs30"><i class="icon-users Fs40"></i>Bienvenido a SIENI</div>
                     <div class="EmptyBox20"></div>
-                    <div class="Wid100"><p:inputText placeholder="Email" styleClass="Wid80 TexAlCenter Fs18"/></div>
+                    <div class="Wid100"><p:inputText placeholder="Usuario" styleClass="Wid80 TexAlCenter Fs18"/></div>
                     <div class="EmptyBox10"></div>
-                    <div class="Wid100"><p:inputText type="password" placeholder="Password" styleClass="Wid80 TexAlCenter Fs18"/></div>
+                    <div class="Wid100"><p:inputText type="password" placeholder="Contraseña" styleClass="Wid80 TexAlCenter Fs18"/></div>
                     <div class="EmptyBox30"></div>
-                    <p:selectBooleanCheckbox value="accept" itemLabel="I Accept Terms And Policies"/>
-                    <div class="EmptyBox30"></div>
-                    <div class="Wid100"><p:button value="Sign In / Sign Up" icon="fa fa-sign-in" styleClass="Wid60 Fs18 White RaisedButton" href="dashboard.xhtml"/></div>
-                    <div class="EmptyBox5"></div>
-                    <div class="Wid100"><p:button value="Forgot Password ?" icon="fa fa-lock" styleClass="RedButton Wid60 Fs18 White RaisedButton"/></div>
-                    <div class="EmptyBox20"></div>
-                    <div class="Separator"></div>
-                    <div class="EmptyBox10"></div>
-                    <div class="Wid100"><p:button value="Access Request ?" icon="fa fa-key" styleClass="GreenButton Wid60 Fs18 White RaisedButton"/></div>
+                    <div class="Wid100"><p:button value="Ingresar" icon="fa fa-sign-in" styleClass="Wid60 Fs18 White RaisedButton" href="index.xhtml"/></div>
                     <div class="EmptyBox20"></div>
                 </div>
                 <div class="Wid100 TexAlCenter MarTop20 Fs14 FontRobotoRegular WhiteBlue">
-                        <i class="fa fa-copyright"></i>  PrimeFaces RIO Theme And Layout <br/> All rights reserved.
-                    </div>
+                    <i class="fa fa-copyright"></i>  Copyright 2015
+                </div>
             </div>
         </div>
-        
+
         <h:outputStylesheet name="css/core-layout.css" library="rio-layout" />
         <h:outputStylesheet name="css/animate.css" library="rio-layout" />
         <h:outputStylesheet name="css/rio-font.css" library="rio-layout" />
