--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -11,7 +11,7 @@
             <li>
                 <a class="menulink ripplelink">
                     <i class="icon-round58 Fs40"></i>
-                    <span class="Fs18">Usuario<i class="icon-downwards Fright Fs20"></i><br /><span class="Fs12 FontRobotoLight">Administrador del sistema</span></span>
+                    <span class="Fs18">Usuario<i class="icon-downwards Fright Fs20"></i><br /><span class="Fs12 FontRobotoLight">Administrador del sistema</span><div class="EmptyBox5"></div><span class="MarAuto Fs12 FontRobotoLight" style="margin-left: 40px;">Fecha:#{formatUtils.getFormatedDate(dateUtils.fechaActual)}</span></span>
                 </a>
                 <ul>
                     <li><a href="#" class="menulink ripplelink"><i class="icon-two385 Fs16"></i>Cambiar de usuario</a></li>
