--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -24,6 +24,61 @@
         <h:body>
             <style type="text/css">
                 .ui-panel .ui-panel-title { font-family: serif; }
+                /*correccion de encabezado de tabs*/
+                .ui-tabs.ui-tabs-top > .ui-tabs-nav {
+                    padding: .01em .01em 0;
+                }
+                .ui-helper-reset {
+                    margin: 0;
+                    padding: 0;
+                    border: 0;
+                    outline: 0;
+                    line-height: 0.2;
+                    text-decoration: none;
+                    font-size: 100%;
+                    list-style: none;
+                }
+
+
+                /*encabezado de tablas*/
+                .ui-datatable table thead tr th, .ui-datatable table tfoot tr td, .ui-datatable table thead tr th {
+                    color: #546e7a;
+                    background-color: #dae8ef;
+                    border: solid 1px #c1d5df;
+                    outline: none;
+                    padding: 2px;
+                    font-family: 'roboto_condensedlight';
+                    font-size: 16px;
+                }
+                /*cambio tamanio de fuente en encabezado de tablas*/
+                .ui-datatable table thead tr th, .ui-datatable table tfoot tr td, .ui-datatable table thead tr th {
+                    color: #546e7a;
+                    background-color: #dae8ef;
+                    border: solid 1px #c1d5df;
+                    outline: none;
+                    padding: 2px;
+                    font-family: 'roboto_condensedlight';
+                    font-size: 14px;
+                }
+
+                /*tamanio de imput*/
+                .ui-inputfield {
+                    color: #546e7a;
+                    font-size: 16px;
+                    font-family: 'roboto_condensedregular' !important;
+                    padding: 1px 5px !important;
+                    border: solid 0px #c6d6df;
+                    border-bottom: solid 1px #b0bec5;
+                    -webkit-transition: all 0.5s ease;
+                    -moz-transition: all 0.5s ease;
+                    -ms-transition: all 0.5s ease;
+                    -o-transition: all 0.5s ease;
+                    transition: all 0.5s ease;
+                    background-color: #f5f5f5;
+                    border-radius: 0px;
+                    -webkit-border-radius: 0px;
+                    -moz-border-radius: 0px;
+                }
             </style>
             <div style="font-family: serif;">
                 <script type="text/javascript">
@@ -62,7 +117,7 @@
                         <ui:include src="layoutmenu.xhtml" />
 
                         <div id="layout-portlets-cover">
-                            <h:form>
+                            <h:form id="migas">
                                 <ui:insert name="breadCrumb">
                                     <p:breadCrumb>
                                         <p:menuitem value="Home" url="/"/>
