--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
@@ -37,13 +37,12 @@
             </li>
             <li><a href="#" class="ripplelink"><i class="icon-wifi83"></i> <span class="Txt">System Settings</span></a></li>
         </ul>
-        
-        <div id="Info" style="text-align: center;color: white;font-size: 1.5em" class="ShowOnDesktop">
+        <div id="Info" style="text-align: center;color: white;font-size: 1.0em" class="ShowOnDesktop MarTop10">
             Centro Escolar San Ramón                        
             <br/>
         </div>
-        
-        <div id="Info" style="text-align: center; color: white;font-size: 2.0em" >
+
+        <div id="Info" style="text-align: center; color: white;font-size: 1.3em" >
             SIENI
         </div>
     </div>
